--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "npm run lint:eslint && npm run lint:tsc",
     "lint:eslint": "next lint",
-    "lint:tsc": "tsc --noEmit"
+    "lint:tsc": "tsc --noEmit",
+    "pre-commit": "lint-staged",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.1.0",
@@ -21,6 +23,9 @@
     "autoprefixer": "^10.4.2",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
+    "eslint-config-prettier": "^8.4.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.4",
     "postcss": "^8.4.7",
     "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
