--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^8.0.0",
-    "react-syntax-highlighter": "^15.4.5"
+    "react-syntax-highlighter": "^15.4.5",
+    "reading-time": "^1.5.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
